<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="?attr/colorOnSurface"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:text="@string/onboarding_theme_title"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurface"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"
        android:text="@string/onboarding_theme_desc"/>

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">

        <RadioButton
            android:id="@+id/radioOctopus"
            style="@style/Onboarding.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_octopus"/>

        <RadioButton
            android:id="@+id/radioSquid"
            style="@style/Onboarding.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_squid"/>

        <RadioButton
            android:id="@+id/radioCuttlefish"
            style="@style/Onboarding.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_cuttlefish"/>
    </RadioGroup>

</LinearLayout>
