<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_desc"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/text_repo_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repo_url"
            android:autoLink="web"
            android:textColorLink="@color/jules_purple"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</ScrollView>
